# IA_HW

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  graph.txt  main.cpp  setup
include/: GUI.hpp  dijkstra.hpp  graph.hpp  kruskal.hpp
src/: CMakeLists.txt  GUI.cpp  dijkstra.cpp  graph.cpp  kruskal.cpp
static/: graph.txt  placement.txt
